# COSC410-2025-AutoGrader

./: .coverage  .coveragerc  .gitignore  BACKEND_DOCUMENTATION.md  BRIDGE_SETUP.md  COURSE_CREATION_FIX_SUMMARY.md  E2E_TEST_RESULTS.md  ENROLLMENT_CONSOLIDATION_SUMMARY.md  FRONTEND_TEST_INSTRUCTIONS.md  GRADING_VERIFICATION.md  JUDGE0_DinD_FINAL.md  JUDGE0_MIGRATION_SUMMARY.md  JUDGE0_SETUP.md  PISTON_GRADING_MECHANICS.md  PISTON_INTEGRATION_GUIDE.md  PISTON_QUICKSTART.md  QUICK_START_JUDGE0.md  README.md  SANDBOX_README.md  TESTING_AND_PROJECT_GUIDE.md  TEST_CASE_GUIDE.md  TEST_SPLITTER_FIX.md  check_schema.py  comprehensive_test.py  docker-compose.yml  example_test_cases.md  init-db.sql  inspect_db.py  migrate_database.py  mock_judge0_server.py  monitor_logs.sh  package-lock.json  package.json  project-tree.txt  pytest.ini  requirements-test.txt  seed_db.py  seed_demo.py  simple_test.py  square_wrong.py  (+8 more)
backend/: .coverage  .coveragerc  .env.example  alembic.ini  coverage.lcov  debug_combined.py  pyproject.toml  requirements.txt
backend/alembic/: course_tag_spit.py  env.py
backend/alembic/versions/: 0001_init.py  0002_add_judge0_id_to_runtimes.py  0003_add_user_course_assignment_tables.py  0004_align_schema.py  1437b4be392c_baseline_schema.py  317d6b894370_initial_schema_with_unified_enrollments.py  6b1f4951fc18_0001_baseline_schema.py  92ed72f1d7fa_baseline_schema.py  c658fbb9b36b_update_schema_with_new_fields.py  cd8e93164cfd_0001_baseline_schema.py  ee2b68e0dd6d_init_clean_schema.py
backend/app/: autograder.db  judge0_client.py  main.py  piston_client.py  seed_appdb.py
backend/app/api/: LoginPage.py  assignments.py  attempt_submission_test.py  courses.py  execute.py  files.py  judge0.py  languages.py  main.py  main_mock.py  mock_courses.py  mock_db.py  mock_registrations.py  piston.py  registrations.py  runs.py  runtimes.py  submissions.py  syntax.py  test_piston.py  test_square_5.py
backend/app/core/: settings.py
backend/app/databases/: autograder.db
backend/app/mock/: main_mock.py  mock_courses.py  mock_db.py  mock_registrations.py
backend/app/models/: models.py
backend/app/new database/: db.py  main.py  (+4 more)
backend/backend/: active.rb
backend/config/: .coveragerc
backend/scripts/: init_db.py  seed_demo.py  seed_prof_demo.py  seed_users.py
backend/test_examples/: test_square_5.py
backend/tests/: conftest.py  test_LoginPage.py  test_api.py  test_assignments.py  test_attempt_submission_test.py  test_courses.py  test_db.py  test_file_converter.py  test_languages.py  test_main.py  test_piston.py  test_registrations.py  test_registrations_new.py  test_sandbox.py  test_settings.py  test_submission_system.py  test_syntax.py
backend/tools/: inspect_db.py
(+325 files in other folders)
