[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "SQLAlchemy>=2.0",
  "alembic>=1.12",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.2.1",
]

[tool.pytest.ini_options]
addopts = "-q"
